--- a/day5/imdb.ipynb
+++ b/day5/imdb.ipynb
@@ -24,7 +24,7 @@
     "# general-purpose libraries\n",
     "import os\n",
     "import bz2\n",
-    "import urllib\n",
+    "import urllib.requests\n",
     "import tarfile\n",
     "import re\n",
     "import pickle\n",
@@ -46,6 +46,49 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bbb7c772-c613-49a6-8364-8343a954fd0d",
+   "metadata": {},
+   "source": [
+    "### Optional Step 0: Colab\n",
+    "\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/annekroon/gesis-machine-learning/blob/main/day5/imdb.ipynb)\n",
+    "\n",
+    "The models under Step 4 and Step 5 can take a long time to train. They benefit a lot from access to a GPU. This means that it may be considerably faster to run them on GoogleColab instead of on your own machine (which quite likely  does not have and/or is not set up for machine learning with GPUs). Click on the button above to open the notebook in Colab.\n",
+    "\n",
+    "You also need to enable GPUs for the notebook. \n",
+    "**Navigate to Edit→Notebook Settings and select GPU from the Hardware Accelerator drop-down**\n",
+    "\n",
+    "Next, uncomment the following code to check out it worked. Also, the transformers library we need later is not installed by default on Colan."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e8160ee-3d54-455f-ba99-cf400743d652",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %tensorflow_version 2.x\n",
+    "# import tensorflow as tf\n",
+    "# device_name = tf.test.gpu_device_name()\n",
+    "# if device_name != '/device:GPU:0':\n",
+    "#    raise SystemError('GPU device not found')\n",
+    "# print('Found GPU at: {}'.format(device_name))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5022dedd-92c2-4a07-9d43-2912ac147d41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pip install transformers"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -555,18 +598,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5d0d394-0e95-48e9-8b9d-33903e0e65ee",
+   "id": "ccc0afc4-05b3-475d-9d7f-e4b3e612adb4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# TODO ADD CLASSIFICATION REPORT FOR FULL TEST DATASET"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ccc0afc4-05b3-475d-9d7f-e4b3e612adb4",
+   "id": "d5d0d394-0e95-48e9-8b9d-33903e0e65ee",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pred_sentences = ['This was an awesome movie. I watch it twice my time watching this beautiful movie if I have known it was this good',\n",
+    "                  'One of the worst movies of all time. I cannot believe I wasted two hours of my life for this movie']\n",
+    "                  \n",
+    "                  \n",
+    "tf_batch = tokenizer(pred_sentences, max_length=128, padding=True, truncation=True, return_tensors='tf')\n",
+    "tf_outputs = model(tf_batch)\n",
+    "tf_predictions = tf.nn.softmax(tf_outputs[0], axis=-1)\n",
+    "labels = ['Negative','Positive']\n",
+    "label = tf.argmax(tf_predictions, axis=1)\n",
+    "label = label.numpy()\n",
+    "for i in range(len(pred_sentences)):\n",
+    "    print(pred_sentences[i], \": \\n\", labels[label[i]])"
+   ]
   }
  ],
  "metadata": {
