add classification report to BERT

--- a/day5/imdb.ipynb
+++ b/day5/imdb.ipynb
@@ -596,13 +596,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2d580c6f-b997-4372-9662-640ce3c0475d",
+   "metadata": {},
+   "source": [
+    "### Get classification report on unseen data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ccc0afc4-05b3-475d-9d7f-e4b3e612adb4",
+   "id": "19381cae-99c4-4891-bba7-16d8f6a631ed",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO ADD CLASSIFICATION REPORT FOR FULL TEST DATASET"
+    "output = model.predict(test_data)\n",
+    "probabilities = tf.nn.softmax(output[0], axis=-1)\n",
+    "predicted_indices = tf.argmax(probabilities, 1)\n",
+    "predicted_class = tf.gather(['neg','pos'], predicted_indices)\n",
+    "\n",
+    "print(classification_report(y_test[VALIDATIONSIZE:], [e.decode('utf-8') for e in predicted_class.numpy()]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35b4b103-fb83-40c8-b929-e340b85d48e6",
+   "metadata": {},
+   "source": [
+    "### Use the model"
    ]
   },
   {
