--- a/literature.bib
+++ b/literature.bib
@@ -118,3 +118,20 @@ year = {2016}
 	volume = {54},
 	year = {2010}
 }
+
+
+@inproceedings{BERT,
+	abstract = {We introduce a new language representation model called BERT, which stands for Bidirectional Encoder Representations from Transformers. Unlike recent language representation models (Peters et al., 2018a; Radford et al., 2018), BERT is designed to pre-train deep bidirectional representations from unlabeled text by jointly conditioning on both left and right context in all layers. As a result, the pre-trained BERT model can be fine-tuned with just one additional output layer to create state-of-the-art models for a wide range of tasks, such as question answering and language inference, without substantial task-specific architecture modifications. BERT is conceptually simple and empirically powerful. It obtains new state-of-the-art results on eleven natural language processing tasks, including pushing the GLUE score to 80.5{\%} (7.7{\%} point absolute improvement), MultiNLI accuracy to 86.7{\%} (4.6{\%} absolute improvement), SQuAD v1.1 question answering Test F1 to 93.2 (1.5 point absolute improvement) and SQuAD v2.0 Test F1 to 83.1 (5.1 point absolute improvement).},
+	archivePrefix = {arXiv},
+	arxivId = {1810.04805},
+	author = {Devlin, Jacob and Chang, Ming Wei and Lee, Kenton and Toutanova, Kristina},
+	booktitle = {NAACL HLT 2019 - 2019 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies - Proceedings of the Conference},
+	eprint = {1810.04805},
+	file = {:home/damian/SURFdrive/literatuur-mendeley/Devlin et al.{\_}2019.pdf:pdf},
+	isbn = {9781950737130},
+	number = {Mlm},
+	pages = {4171--4186},
+	title = {{BERT: Pre-training of deep bidirectional transformers for language understanding}},
+	volume = {1},
+	year = {2019}
+}
