--- a/day3/day3-afternoon.tex
+++ b/day3/day3-afternoon.tex
@@ -283,7 +283,7 @@ fo.write("\n")
 
 \begin{frame}[plain]
 \makebox[\linewidth]{
-	\includegraphics[width=\paperwidth,height=\paperheight,keepaspectratio]{../../pictures/topicscores}}
+	\includegraphics[width=\paperwidth,height=\paperheight,keepaspectratio]{../pictures/topicscores}}
 \end{frame}
 
 
@@ -317,7 +317,7 @@ It influences the ordering of the words in pyldavis.
 \begin{frame}[plain]{Code examples}
 
 
-\url{https://github.com/damian0604/bdaca/blob/master/rm-course-2/week12/lda.ipynb}
+\url{https://github.com/annekroon/gesis-machine-learning/blob/main/day3/excercise-afternoon/lda.ipynb}
 \end{frame}
 
 
@@ -452,27 +452,20 @@ Example:
 
 \begin{frame}[plain]
 
-  \begin{block}{Exercise for this week}
+  \begin{block}{Exercise for this afternoon}
     \footnotesize
   \begin{itemize}
-  \item Work through the example notebook on LDA: \url{https://github.com/damian0604/bdaca/blob/master/12ec/week11/lda.ipynb}
+  \item Work through the example notebook on LDA: \url{https://github.com/annekroon/gesis-machine-learning/blob/main/day3/excercise-afternoon/lda.ipynb}
   \item But most importantly: \textbf{Use a dataset of your choice} and find a suitable topic model. You can also try to compare multiple approaches (e.g., clustering vs LDA). Possible inspiration: \url{https://github.com/annekroon/gesis-ml-learning/blob/master/03wednesday/livecoding.ipynb}
     \end{itemize}
 \end{block}
 
-\begin{block}{Next week: Word embeddings}
-Models that learn that `teacher' and `instructor' are more similar than `teacher' and `plumber'; or that `king' - `man' + `woman' = `queen'.
-\end{block}
 
-
-\begin{block}{Final project}
-  If you haven't done so yet, talk with me about your topic
-\end{block}
 
 \end{frame}
 
 \begin{frame}[standout]
-Good luck with the take-home exam!
+Good luck!
 \end{frame}
 
 
