--- a/day4/day4-afternoon.tex
+++ b/day4/day4-afternoon.tex
@@ -120,7 +120,7 @@
 Also re-read chapter 8.5!
 \end{frame}
 
-\question{Everything clear from last week?}
+\question{Everything clear from this morning?}
 
 \section{The problem of overfitting}
 
@@ -272,7 +272,7 @@ A couple of years ago, you could get away with just doing a train/test split in 
 
 
 \begin{frame}[standout]
-In other words: wether you have or create a train/validation/test or use cross-validation -- just make sure you always set aside one test set for final evaluation that you have never used before.
+In other words: whether you have or create a train/validation/test or use cross-validation -- just make sure you always set aside one test set for final evaluation that you have never used before.
 \end{frame}
 
 
@@ -458,7 +458,7 @@ You might have notived the Pipeline construct in the last example.
 	
 \end{frame}
 
-\begin{frame}[fragile]{Let's rewrite our example from last week's slides as pipeline (and add cross-validation)}
+\begin{frame}[fragile]Example with a pipeline (and add cross-validation)}
 \begin{lstlisting}
 from sklearn.feature_extraction.text import TfidfVectorizer
 from sklearn.linear_model import LogisticRegressionCV
