--- a/day4/day4-morning.tex
+++ b/day4/day4-morning.tex
@@ -149,7 +149,7 @@ You have no labels. \onslide<4>{(\footnotesize{You did not measure \texttt{y})}}
 \onslide<5>{\textbf{Again, you already know some techniques to find out how \texttt{x1}, \texttt{x2},\ldots \texttt{x\_i} co-occur from other courses:} \begin{itemize}
 		\item Principal Component Analysis (PCA) and Singular Value Decomposition (SVD)
 		\item Cluster analysis
-		\item Topic modelling (Non-negative matrix factorization and Latent Dirichlet Allocation)
+		\item Topic modelling (Latent Dirichlet Allocation)
 		\item \ldots
 	\end{itemize}
 }
@@ -475,7 +475,7 @@ $$ \frac{P(x_1 \mid label) \cdot P(x_2 \mid \rm{label})\ \cdot P(x_3 \mid label)
 	
 	VADER by \cite{Hutto2014} works in a similar way.
 	\pause
-	\textbf{Even though this is much less na\"ive than LIWC, for instance, the problem remains: Can we construct a dictionary that, \emph{irrespective of the context}, gives us a meaningful estimate of sentiment? }
+	\footnotesize{Even though this is much less na\"ive than LIWC, for instance, the problem remains: Can we construct a dictionary that, \emph{irrespective of the context}, gives us a meaningful estimate of sentiment? }
 \end{frame}
 
 
@@ -690,9 +690,6 @@ This returns, as you would expect and hope:
 
 \subsection{Classifiers}
 
-\begin{frame}[standout]
-	Check out the overview from last week
-\end{frame}
 
 \begin{frame}{Different classifiers}
 	Typical options in a nutshell:
