--- a/literature.bib
+++ b/literature.bib
@@ -13,6 +13,21 @@ year = {2016}
 }
 
 
+@article{Thelwall2012,
+	Author = {Thelwall, Mike and Buckley, Kevan and Paltoglou, Georgios},
+	Date-Added = {2015-03-16 13:31:47 +0000},
+	Date-Modified = {2015-03-16 13:32:09 +0000},
+	Doi = {10.1002/asi.21662},
+	Issn = {1532-2890},
+	Journal = {Journal of the American Society for Information Science and Technology},
+	Number = {1},
+	Pages = {163--173},
+	Title = {Sentiment strength detection for the social web},
+	Volume = {63},
+	Year = {2012},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1002/asi.21662}}
+
+
 
 @misc{Pennebaker2007,
 	address = {Austin; TX},
