--- a/day1/basicsofpython.tex
+++ b/day1/basicsofpython.tex
@@ -478,9 +478,8 @@ for e in mygen:
 \begin{frame}[standout]
 	Make sure you understood all of today's concepts.
 	
-	Also read Chapter 4 and ask questions on Friday if needed.
-	
-	 I prepared exercises to work on \emph{during} the Friday meeting (alone or in teams):
-	 \large{\url{https://github.com/damian0604/bdaca/blob/master/12ec/week02/exercises/exercises.md}}
+	Also read Chapter 4 and ask questions if needed.
+	If you want do some exercises with basic python, please see here:
+	 \large{\url{https://github.com/annekroon/gesis-machine-learning/blob/main/day1/exercises-basicpython/exercises.md}}
 \end{frame}
 
