--- a/day1/day1-afternoon.tex
+++ b/day1/day1-afternoon.tex
@@ -259,7 +259,7 @@ It depends.
 
 
 \begin{frame}[standout]
-This morning we learned how to tokenize with a list comprehension (and that's often a good idea!). But what if we want to \emph{directly} get a DTM instead of lists of tokens?
+Tomorrow we discuss how we can tokenize with a list comprehension (and that's often a good idea!). But what if we want to \emph{directly} get a DTM instead of lists of tokens?
 \end{frame}
 
 
