--- a/day1/day1-morning.tex
+++ b/day1/day1-morning.tex
@@ -49,12 +49,11 @@
 		backgroundcolor=\color[rgb]{.7,.7,.7}}}{}
 
 
-
 \usepackage[american]{babel}
 \usepackage{csquotes}
 \usepackage[style=apa, backend = biber]{biblatex}
 \DeclareLanguageMapping{american}{american-UoN}
-\addbibresource{../../bdaca.bib}
+\addbibresource{../literature.bib}
 \renewcommand*{\bibfont}{\tiny}
 
 \usepackage{tikz}
@@ -66,7 +65,7 @@
 \usepackage{booktabs}
 \usepackage{graphicx}
 
-\graphicspath{{../../pictures/}}
+\graphicspath{{../pictures/}}
 
 \makeatletter
 \setbeamertemplate{headline}{%
@@ -218,7 +217,7 @@ on
 {\setbeamercolor{background canvas}{bg=black}
 	\begin{frame}[plain]
 	\makebox[\linewidth]{
-		\includegraphics[width=\paperwidth,height=\paperheight,keepaspectratio]{../../pictures/bigdataisliketeenagesex.jpg}
+		\includegraphics[width=\paperwidth,height=\paperheight,keepaspectratio]{../pictures/bigdataisliketeenagesex.jpg}
 	}
 \end{frame}
 }
@@ -356,14 +355,12 @@ Assuming that science should be \emph{transparent} and \emph{reproducible by any
 
 
 
-
-
 \subsection{Python: A language, not a program}
 
 
 \begin{frame}[plain]
 \makebox[\columnwidth]{
-\includegraphics[width=\columnwidth,height=\paperheight,keepaspectratio]{../../pictures/knitting.jpg}}
+\includegraphics[width=\columnwidth,height=\paperheight,keepaspectratio]{../pictures/knitting.jpg}}
 \footnotesize{An algorithm in a language that's a bit harder (I think) than Python}
 \end{frame}
 
