--- a/literature.bib
+++ b/literature.bib
@@ -12,6 +12,84 @@ volume = {4},
 year = {2016}
 }
 
+@article{boyd2012,
+	Abstract = { The era of Big Data has begun. Computer scientists, physicists, economists, mathematicians, political scientists, bio-informaticists, sociologists, and other scholars are clamoring for access to the massive quantities of information produced by and about people, things, and their interactions. Diverse groups argue about the potential benefits and costs of analyzing genetic sequences, social media interactions, health records, phone logs, government records, and other digital traces left by people. Significant questions emerge. Will large-scale search data help us create better tools, services, and public goods? Or will it usher in a new wave of privacy incursions and invasive marketing? Will data analytics help us understand online communities and political movements? Or will it be used to track protesters and suppress speech? Will it transform how we study human communication and culture, or narrow the palette of research options and alter what `research' means? Given the rise of Big Data as a socio-technical phenomenon, we argue that it is necessary to critically interrogate its assumptions and biases. In this article, we offer six provocations to spark conversations about the issues of Big Data: a cultural, technological, and scholarly phenomenon that rests on the interplay of technology, analysis, and mythology that provokes extensive utopian and dystopian rhetoric. },
+	author = {Danah Boyd and Kate Crawford},
+	Date-Added = {2015-02-19 20:28:12 +0100},
+	Date-Modified = {2015-03-10 14:47:27 +0000},
+	Doi = {10.1080/1369118X.2012.678878},
+	Journal = {Information, Communication \& Society},
+	Number = {5},
+	Pages = {662-679},
+	Title = {Critical questions for {Big Data}},
+	Volume = {15},
+	Year = {2012},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1080/1369118X.2012.678878}}
+
+@article{Lazer2009,
+	abstract = {A field is emerging that leverages the capacity to collect and analyze data at a scale that may reveal patterns of individual and group behaviors.},
+	author = {Lazer, David and Pentland, Alex and Adamic, Lada and Aral, Sinan and Barab{\'{a}}si, Albert-L{\'{a}}szl{\'{o}} and Brewer, Devon and Christakis, Nicholas and Contractor, Noshir and Fowler, James and Gutmann, Myron and Jebara, Tony and King, Gary and Macy, Michael and Roy, Deb and van Alstyne, Marshall},
+	doi = {10.1126/science.1167742},
+	file = {:Users/damian/Dropbox/uva/literatuur-mendeley/Lazer et al.{\_}2009.pdf:pdf},
+	isbn = {1939-0068},
+	issn = {19395108},
+	journal = {Science},
+	mendeley-groups = {papers/bigdatahoofdstuk},
+	pages = {721--723},
+	pmid = {19197046},
+	title = {Computational social science},
+	volume = {323},
+	year = {2009}
+	}
+
+
+@article{Hilbert2019,
+	author = {Hilbert, Martin and Barnett, George and Blumenstock, Joshua and Contractor, Noshir and Diesner, Jana and Frey, Seth and Gonz{\'{a}}lez-Bail{\'{o}}n, Sandra and Lamberso, PJ and Pan, Jennifer and Peng, Tai-Quan and Shen, Cuihua and Smaldino, Paul E and {Van Atteveldt}, Wouter and Waldherr, Annie and Zhang, Jingwen and Zhu, Jonathan J H},
+	journal = {International Journal of Communication},
+	pages = {3912--3934},
+	title = {{Computational Communication Science : A Methodological Catalyzer for a Maturing Discipline}},
+	volume = {13},
+	year = {2019}
+	}
+
+@book{VanAtteveldt2008,
+	address = {Charleston, SC},
+	author = {Van Atteveldt, Wouter},
+	file = {:Users/dami/Library/Application Support/Mendeley Desktop/Downloaded/van Atteveldt - 2008 - Semantic Network Analysis Techniques for Extracting, Representing, and Querying Media Content.pdf:pdf},
+	isbn = {1439211361},
+	publisher = {BookSurge},
+	title = {Semantic Network Analysis: {Techniques} for Extracting, Representing, and Querying Media Content},
+	year = {2008}
+	}
+
+@article{VanAtteveldt2018a,
+	abstract = {ABSTRACTThe recent increase in digitally available data, tools, and processing power is fostering the use of computational methods to the study of communication. This special issue discusses the validity of using big data in communication science and showcases a number of new methods and applications in the fields of text and network analysis. Computational methods have the potential to greatly enhance the scientific study of communication because they allow us to move towards collaborative large-N studies of actual behavior in its social context. This requires us to develop new skills and infrastructure and meet the challenges of open, valid, reliable, and ethical “big data” research. By bringing together a number of leading scholars in one issue, we contribute to the increasing development and adaptation of computational methods in communication science.},
+	author = {van Atteveldt, Wouter and Peng, Tai Quan},
+	doi = {10.1080/19312458.2018.1458084},
+	journal = {Communication Methods and Measures},
+	number = {2-3},
+	pages = {81--92},
+	publisher = {Routledge},
+	title = {{When Communication Meets Computation: Opportunities, Challenges, and Pitfalls in Computational Communication Science}},
+	volume = {12},
+	year = {2018}
+	}
+
+@article{Vis2013,
+		Author = {Vis, Farida},
+		Date-Added = {2015-02-19 20:30:07 +0100},
+		Date-Modified = {2015-02-19 23:09:31 +0100},
+		Doi = {10.5210/fm.v18i10.4878},
+		File = {:Users/dami/Library/Application Support/Mendeley Desktop/Downloaded/Vis - 2013 - A critical reflection on Big Data Considering APIs, researchers and tools as data makers.pdf:pdf},
+		Issn = {13960466},
+		Journal = {First Monday},
+		Number = {10},
+		Pages = {1--16},
+		Title = {A critical reflection on {Big Data}: Considering {APIs}, researchers and tools as data makers},
+		Volume = {18},
+		Year = {2013},
+		Bdsk-Url-1 = {http://journals.uic.edu/ojs/index.php/fm/article/view/4878},
+		Bdsk-Url-2 = {http://dx.doi.org/10.5210/fm.v18i10.4878}}
 
 @article{Thelwall2012,
 	Author = {Thelwall, Mike and Buckley, Kevan and Paltoglou, Georgios},
@@ -63,7 +141,31 @@ year = {2016}
 	year = {2020}
 }
 
+@article{VanAtteveldt2019,
+	author = {{van Atteveldt}, Wouter and Strycharz, Joanna and Trilling, Damian and Welbers, Kasper},
+	file = {:home/damian/SURFdrive/literatuur-mendeley/Van Atteveldt et al.{\_}2019(2).pdf:pdf},
+	journal = {International Journal of Communication},
+	pages = {3935--3954},
+	title = {{Toward Open Computational Communication Science : A Practical Road Map for Reusable Data and Code University of Amsterdam , the Netherlands}},
+	volume = {13},
+	year = {2019}
+}
 
+@article{Mahrt2013,
+	Author = {Mahrt, Merja and Scharkow, Michael},
+	Date-Added = {2015-02-19 20:30:14 +0100},
+	Date-Modified = {2015-02-19 23:07:45 +0100},
+	Doi = {10.1080/08838151.2012.761700},
+	File = {:Users/dami/Library/Application Support/Mendeley Desktop/Downloaded/Mahrt, Scharkow - 2013 - The Value of Big Data in Digital Media Research.pdf:pdf},
+	Issn = {0883-8151},
+	Journal = {Journal of Broadcasting \& Electronic Media},
+	Number = {1},
+	Pages = {20--33},
+	Title = {The Value of {Big Data} in Digital Media Research},
+	Volume = {57},
+	Year = {2013},
+	Bdsk-Url-1 = {http://www.tandfonline.com/doi/abs/10.1080/08838151.2012.761700},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1080/08838151.2012.761700}}
 
 
 @article{VanAtteveldt2021,
