remove duplicated solutions

--- a/day3/day3-morning.tex
+++ b/day3/day3-morning.tex
@@ -549,7 +549,7 @@ But:
 \end{itemize}
 
 \pause 
-$\Rightarrow$ \textbf{Alternative: Choose the opposite approach and first find out which cases are most similar, \textit{then} describe what features characterize each group of cases}
+$\Rightarrow$ \footnotesize{Alternative: Choose the opposite approach and first find out which cases are most similar, \textit{then} describe what features characterize each group of cases}
 
 
 \end{frame}
