minor slide updates

--- a/day5/day5-afternoon.tex
+++ b/day5/day5-afternoon.tex
@@ -103,7 +103,7 @@
 
 
 
-\title[ML in PYthon]{\textbf{A Practical Introduction to Machine Learning in Python} \\Day 5 -- Thursday \\ »Next steps«}
+\title[ML in PYthon]{\textbf{A Practical Introduction to Machine Learning in Python} \\Day 5 -- Friday \\ »Next steps«}
 \author[Damian Trilling, Anne Kroon]{Damian Trilling \\ Anne Kroon \\ ~ \\ \footnotesize{d.c.trilling@uva.nl, @damian0604 \\a.c.kroon@uva.nl, @annekroon} \\}
 \date{September 30, 2021}
 \institute[Gesis]{Gesis}
@@ -125,10 +125,6 @@
 \setbeamercovered{transparent}
 
 \section{Hot and happening: Transformers}
-
-\begin{frame}[standout]
-TODO IETS TOEVOEGEN OVER BERT EN TRANSFORMERS EN ZO
-\end{frame}
 
 \begin{frame}{The idea}
 \begin{block}{BERT: Bidirectional Encoder Representations from Transformers 	\parencite{BERT}}
@@ -152,6 +148,10 @@ TODO IETS TOEVOEGEN OVER BERT EN TRANSFORMERS EN ZO
 	\end{block}
 \end{frame}
 
+
+\begin{frame}[standout]
+	Let's look at an example (imdb.ipynb)
+\end{frame}
 
 
 
@@ -181,7 +181,7 @@ TODO IETS TOEVOEGEN OVER BERT EN TRANSFORMERS EN ZO
 
 
 \begin{frame}[standout]
-	TODO KORTE RECAP/SAMENVATTING VAN DE CURSUS
+(short recap of course)
 \end{frame}
 
 
