--- a/day2/day2-morning.tex
+++ b/day2/day2-morning.tex
@@ -55,7 +55,7 @@
 \usepackage{csquotes}
 \usepackage[style=apa, backend = biber]{biblatex}
 \DeclareLanguageMapping{american}{american-UoN}
-\addbibresource{../references.bib}
+\addbibresource{../literature.bib}
 \renewcommand*{\bibfont}{\tiny}
 
 \usepackage{tikz}
